added paul again

--- a/produkt_eins.html
+++ b/produkt_eins.html
@@ -3,7 +3,7 @@
 </head>
 
 <body>
-  <h1>Welcome to Meteor! Paul und Marcel und Wolf</h1>
+  <h1>Welcome to Meteor! Paul II und Marcel und Wolf</h1>
 
   {{> hello}}
 </body>
